fixed footer spacing issue on project pages

--- a/css/style.css
+++ b/css/style.css
@@ -378,7 +378,7 @@ figure.effect-sarah:hover p, figure.effect-sarah:hover h2 {
 .footer-section {
   background: #fff;
   text-align: center;
-  padding-top: 100px; 
+  padding-top: 50px; 
   color: #333;
 }
 /* line 131, ../scss/style.scss */
@@ -428,9 +428,18 @@ figure.effect-sarah:hover p, figure.effect-sarah:hover h2 {
   
 
 
-html, body, .projectContainer
+html, body
 {
     height: 100%;
+}
+
+.projectContainer {
+  min-height: 100%;
+}
+
+.projectContainer:after{
+  content: "";
+  display: block
 }
 
 .Container:before
@@ -467,7 +476,7 @@ html, body, .projectContainer
 
 .Wrapper
 {
-    position: absolute;
+    /*position: absolute;*/
     width: 100%;
     /*height: 100%;*/
 }
@@ -502,15 +511,9 @@ html, body, .projectContainer
 }
 
 
-#projectFooter {
+#projectFooter, .projectFooter:after {
 
-position: relative;
-
-bottom: 0;
-
-width: 100%;
-
-height: 12%; /* choose any height */
+height: 142px;
 
 }
 
@@ -562,7 +565,7 @@ height: 12%; /* choose any height */
     height: 200px;
   }
   #projectFooter {
-    margin-top: 160%;
+    margin-top: 50%;
     position: none;
   }
   .footer-section{
@@ -608,6 +611,8 @@ height: 12%; /* choose any height */
   /* line 189, ../scss/style.scss */
   .top-bar .top-bar-section ul {
     background: rgba(255,255,255,0.2);
+    margin: 0;
+
   }
   /* line 191, ../scss/style.scss */
   .top-bar .top-bar-section ul li {
